# voxceleb_age_pred

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
outputs/ldl_bc_run1/: bias_correction.json  metrics.json  predictions_test.csv  predictions_val.csv  run_config.json
src/voxceleb_age_pred/: config.py  eval_utils.py  losses.py  utils.py
src/voxceleb_age_pred/data/: __init__.py  dataset.py  manifest.py
src/voxceleb_age_pred/engine/: trainer.py
src/voxceleb_age_pred/models/: __init__.py  model.py
